--- a/src/includes/css/status_popup.css
+++ b/src/includes/css/status_popup.css
@@ -1,39 +1,65 @@
 /*
 https://alvarotrigo.com/blog/css-alerts/
 */
+.ticket-status-notification {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .ticket-status-notification .alert {
-    position: relative;
-    top: 10;
-    left: 0;
-    width: auto;
-    height: auto;
-    padding: 10px;
-    margin: 10px;
-    line-height: 1.8;
-    border-radius: 5px;
-    font-family: sans-serif;
-    font-weight: 400;
+  position: relative;
+  width: auto;
+  height: auto;
+  padding: 10px 50px 10px 50px;
+  margin: 10px;
+  line-height: 1.8;
+  border-radius: 5px;
+  font-family: sans-serif;
+  font-weight: 400;
+}
+  
+.ticket-status-notification .alertText {
+  display: table;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 16px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .ticket-status-notification .info {
+    background-color: #5f5f5f;
   }
   
-  .ticket-status-notification .alertText {
-    display: table;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 16px;
+  .ticket-status-notification .error {
+    background-color: rgb(255, 49, 49);
   }
 
+  .ticket-status-notification .success {
+    background-color: rgb(52, 205, 52);
+  }
+}
+
+@media (prefers-color-scheme: light) {
   .ticket-status-notification .info {
     background-color: #EEE;
     border: 1px solid #DDD;
     color: #999;
   }
-  
+   
+  .ticket-status-notification .error {
+    background-color: #FEE;
+    border: 1px solid #EDD;
+    color: #A66;
+  }
+
   .ticket-status-notification .success {
     background-color: #EFE;
     border: 1px solid #DED;
     color: #9A9;
   }
-  
+}
+  /*
   .ticket-status-notification .notice {
     background-color: #EFF;
     border: 1px solid #DEE;
@@ -45,9 +71,4 @@ https://alvarotrigo.com/blog/css-alerts/
     border: 1px solid #FEEC6F;
     color: #C9971C;
   }
-  
-  .ticket-status-notification .error {
-    background-color: #FEE;
-    border: 1px solid #EDD;
-    color: #A66;
-  }
+ */
